WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75885
[Qt][WK2] Fix keyboard shortcuts in MiniBrowser.
https://bugs.webkit.org/show_bug.cgi?id=75885
Summary
[Qt][WK2] Fix keyboard shortcuts in MiniBrowser.
Zeno Albisser
Reported
2012-01-09 13:01:10 PST
The following shortcuts do not work reliably in MiniBrowser: Ctrl+R & Ctrl+L.
Attachments
patch for review.
(4.91 KB, patch)
2012-01-09 13:40 PST
,
Zeno Albisser
no flags
Details
Formatted Diff
Diff
patch for review. - same content, but some more ChangeLog.
(5.21 KB, patch)
2012-01-09 16:02 PST
,
Zeno Albisser
kenneth
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Zeno Albisser
Comment 1
2012-01-09 13:40:24 PST
Created
attachment 121720
[details]
patch for review. Doing this in C++ is the only reliable way due to the event delivery mechanism in QML.
Kenneth Rohde Christiansen
Comment 2
2012-01-09 15:15:24 PST
Comment on
attachment 121720
[details]
patch for review. View in context:
https://bugs.webkit.org/attachment.cgi?id=121720&action=review
> Tools/ChangeLog:7 > + [Qt][WK2] Fix keyboard shortcuts in MiniBrowser. > +
https://bugs.webkit.org/show_bug.cgi?id=75885
> + > + Reviewed by NOBODY (OOPS!). > +
A bit more description would be nice. Was the original code wrong? or is it due to bugs in QML? etc
Zeno Albisser
Comment 3
2012-01-09 16:02:12 PST
Created
attachment 121745
[details]
patch for review. - same content, but some more ChangeLog.
Kenneth Rohde Christiansen
Comment 4
2012-01-10 01:21:17 PST
Comment on
attachment 121745
[details]
patch for review. - same content, but some more ChangeLog. View in context:
https://bugs.webkit.org/attachment.cgi?id=121745&action=review
> Tools/ChangeLog:10 > + In QML events are propagated through parents. But since the > + WebView may consume key events, a shortcut might never reach > + the top QtQuickItem. > + Therefore an application wide event handling function in C++ > + needs to take care of shortcuts for MiniBrowser.
Way better... now a small comment in the code would be quite nice. like in the notify method
Zeno Albisser
Comment 5
2012-01-10 03:07:12 PST
Committed
r104546
: <
http://trac.webkit.org/changeset/104546
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug