[Qt][WK2] Fix keyboard shortcuts in MiniBrowser. https://bugs.webkit.org/show_bug.cgi?id=75885

In QML events are propagated through parents. But since the
WebView may consume key events, a shortcut might never reach
the top QtQuickItem.
Therefore an application wide event handling function in C++
needs to take care of shortcuts for MiniBrowser.

Reviewed by Kenneth Rohde Christiansen.

* MiniBrowser/qt/BrowserWindow.cpp:
(BrowserWindow::reload):
(BrowserWindow::focusAddressBar):
* MiniBrowser/qt/BrowserWindow.h:
* MiniBrowser/qt/MiniBrowserApplication.cpp:
(MiniBrowserApplication::notify):
* MiniBrowser/qt/qml/BrowserWindow.qml:

Canonical link: https://commits.webkit.org/92726@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104546 268f45cc-cd09-0410-ab3c-d52691b4dbfc